# stm32-cmake

./: CMakeLists.txt  LICENSE  README.md  README_zh.md
cmake/: gcc-arm-none-eabi.cmake  stm32-gcc-flags.cmake  stm32-gcc-postbuild.cmake  stm32.cmake
